--- a/pom.xml
+++ b/pom.xml
@@ -101,13 +101,13 @@
 	      <name>Mithun Technologies Releases Nexus Repository</name>
 	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
 	    </repository>
-	    
+	    --> 
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <name>suneelRepowq</name>
+	      <url>http://65.2.123.133:8081/repository/Web-App-Snapshot/</url>
 	    </snapshotRepository>
-	    -->
+	   
 	</distributionManagement>
 	
 	<build>
