--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>43.0.1-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
@@ -101,13 +101,13 @@
 	      <name>Mithun Technologies Releases Nexus Repository</name>
 	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
 	    </repository>
-	    
+	    -->
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <name>Integration</name>
+	      <url>http://13.232.213.251:8081/repository/Web-App-Snapshot/</url>
 	    </snapshotRepository>
-	    -->
+	    
 	</distributionManagement>
 	
 	<build>
